js/js.translator/testData/incremental/invalidation/companionPropertiesWithCrossModuleInliner/lib2/l2.3.kt
fun test(): Int {
    return testStringProperty() +
            testIntProperty() +
            testPairProperty()
}
